# usd-pipeline

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
resources/: application.yaml
src/config/: config_manager.py
src/core/: __init__.py  bootstrap.py  folder_structure.py  usd_validator.py  validator.py
src/ui/: MainWindow.py  __init__.py  main_window.py
src/usd_pipeline_core/config/: config_manager.py
src/usd_pipeline_core/core/: validator.py
src/usd_pipeline_core/ui/: __init__.py  main_window.py
tests/core/: test_bootstrap.py  test_folder_structure.py  test_usd_validator.py  test_validator.py
tests/ui/: __init__.py  test_main_window.py
